compiler/testData/diagnostics/tests/suppress/oneWarning/onParameter.kt
class C {
    fun foo(suppress("REDUNDANT_NULLABLE") p: String?? = null <!USELESS_CAST!>as<!> Nothing??) = p
}